--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,6 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 
-/[aA]ssets/Dungeon_GUI/*
-/[aA]ssets/Dungeon_GUI/Buttons/*
+
 /ProjectGameD/Assets/Dungeon_GUI
+/ProjectGameD/Assets/EasyTransitions
