--- a/ProjectGameD/Packages/manifest.json
+++ b/ProjectGameD/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.crashkonijn.goap": "https://github.com/crashkonijn/GOAP.git?path=/Package#2.1.19",
+    "com.unity.2d.sprite": "1.0.0",
     "com.unity.ai.navigation": "1.1.5",
     "com.unity.collab-proxy": "2.2.0",
     "com.unity.feature.development": "1.0.1",
